terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_key_pair" "deployer" {
  key_name   = "github-key"
  public_key = file(var.public_key_path)
}

resource "aws_security_group" "web_sg" {
  name = "web-sg"

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "app" {
  ami             = "ami-0c02fb55956c7d316" # Ubuntu 22.04
  instance_type   = "t2.micro"
  key_name        = aws_key_pair.deployer.key_name
  security_groups = [aws_security_group.web_sg.name]

  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install docker.io -y
              sudo systemctl start docker
              docker run -d -p 8000:8000 -e OPENAI_API_KEY=${var.openai_api_key} bigcephas1/text-to-image:latest
              EOF

  tags = {
    Name = var.instance_name
  }
}
